# Turneo-Task

./: .pre-commit-config.yaml  Dockerfile  README.md  manage.py  pyproject.toml
currency_converter/: .env.example  models.py  utils.py  views.py
turneo_api_consumer/: asgi.py  settings.py  urls.py  wsgi.py
